# clinvoice_config

./: Cargo.toml  LICENSE  README.md
src/: adapters.rs  config.rs  employees.rs  error.rs  invoices.rs  jobs.rs  lib.rs  organizations.rs  store.rs  store_value.rs
src/adapters/: display.rs
src/invoices/: default.rs
src/jobs/: default.rs
