# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-config"
version = "0.6.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "User configuration of CLInvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-config"

[dependencies]
clinvoice-error = {branch = "release/0.3", git = "https://github.com/Iron-E/clinvoice-error"}
clinvoice-schema = {branch = "release/0.9", features = ["serde"], git = "https://github.com/Iron-E/clinvoice-schema"}

dirs = "3"
humantime-serde = "1"
serde = {features = ["derive"], version = "1"}
thiserror = "1"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "1"
