# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-config"
version = "0.10.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "User configuration of Winvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-config"

[dependencies]
dirs = "4"
humantime-serde = "1"
thiserror = "1"
toml = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.winvoice-schema]
branch = "release/0.14"
features = ["serde"]
git = "https://github.com/Iron-E/winvoice-schema"

[dev-dependencies]
pretty_assertions = "1"
